
find_package(OpenSSL)

file(GLOB headers *.h *.inl)
file(GLOB sources *.cpp)

add_ace_component(ACE_SSL
    DEFINE_SYMBOL ACE_SSL_BUILD_DLL
    SOURCES ${sources}
    PUBLIC_HEADER ${headers}
    PUBLIC_LINK_LIBRARIES ACE ${OPENSSL_LIBRARIES}
    PUBLIC_INCLUDE_DIRECTORIES ${OPENSSL_INCLUDE_DIR}
    PACKAGE ACE
    REQUIRES OPENSSL_FOUND
)
