
project(APG CXX)
cmake_minimum_required(VERSION 3.3)

if (NOT ACE_ROOT)
  find_package(ACE REQUIRED CONFIG)
endif()
add_subdirectory(Active_Objects)
add_subdirectory(Config)
add_subdirectory(Containers)
add_subdirectory(Logging)
add_subdirectory(Misc_IPC)
add_subdirectory(Naming)
add_subdirectory(Proactor)
add_subdirectory(Processes)
add_subdirectory(Reactor)
add_subdirectory(Shared_Memory)
add_subdirectory(Signals)
add_subdirectory(Sockets)
add_subdirectory(Streams)
add_subdirectory(Svc_Config)
add_subdirectory(ThreadManagement)
add_subdirectory(ThreadPools)
add_subdirectory(Threads)
add_subdirectory(ThreadSafety)
add_subdirectory(Timers)
